Interpreter/tests/negative-examples/substringEndsOutside.cl
class Main inherits IO {
  main() : Object { 
    "hello whirled".substr(1, 15)
  } ;
} ; 
